@@ -948,26 +948,26 @@ public class JabRefGuiPreferences extends JabRefCliPreferences implements GuiPre
         }
 
         return cycle.stream()
-                .map(layout -> PreviewLayout.of(
-                        layout,
-                        customPreviewLayouts,
-                        getStringList(PREVIEW_BST_LAYOUT_PATHS).stream().map(Path::of).toList(),
-                        getLayoutFormatterPreferences(),
-                        Injector.instantiateModelOrService(JournalAbbreviationRepository.class),
-                        Injector.instantiateModelOrService(BibEntryTypesManager.class))
-                ).filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                    .map(layout -> PreviewLayout.of(
+                            layout,
+                            customPreviewLayouts,
+                            getStringList(PREVIEW_BST_LAYOUT_PATHS).stream().map(Path::of).toList(),
+                            getLayoutFormatterPreferences(),
+                            Injector.instantiateModelOrService(JournalAbbreviationRepository.class),
+                            Injector.instantiateModelOrService(BibEntryTypesManager.class))
+                    ).filter(Objects::nonNull)
+                    .collect(Collectors.toList());
     }
 
     private List<String> previewLayoutsToStrings(List<PreviewLayout> previewCycle) {
         return previewCycle.stream()
-                .map(layout -> {
-                    if (layout instanceof CitationStylePreviewLayout citationStyleLayout) {
-                        return citationStyleLayout.getFilePath();
-                    } else {
-                        return layout.getName();
-                    }
-                }).toList();
+                           .map(layout -> {
+                               if (layout instanceof CitationStylePreviewLayout citationStyleLayout) {
+                                   return citationStyleLayout.getFilePath();
+                               } else {
+                                   return layout.getName();
+                               }
+                           }).toList();
     }
 
     private int getPreviewCyclePosition(List<PreviewLayout> layouts, int defaultPosition) {
